Part I$II assignment4.Rmd

--- a/assignment4.Rmd
+++ b/assignment4.Rmd
@@ -1,33 +1,27 @@
 ---
-title: "Principle Component Aanalysis"
+title: "Assignment4"
+author: "yq2205"
+date: "11/2/2017"
 output: html_document
 ---
-#Data
-The data you will be using comes from the Assistments online intelligent tutoring system (https://www.assistments.org/). It describes students working through online math problems. Each student has the following data associated with them:
 
-- id
-- prior_prob_count: How many problems a student has answered in the system prior to this session
-- prior_percent_correct: The percentage of problems a student has answered correctly prior to this session
-- problems_attempted: The number of problems the student has attempted in the current session
-- mean_correct: The average number of correct answers a student made on their first attempt at problems in the current session
-- mean_hint: The average number of hints a student asked for in the current session
-- mean_attempt: The average number of attempts a student took to answer a problem in the current session
-- mean_confidence: The average confidence each student has in their ability to answer the problems in the current session
-
-#Start by uploading the data
-```{r}
-D1 <- 
-
-  #We won't need the id variable, so remove that.
-
+```{r }
+#upload the data
+library(dplyr)
+library(tidyr)
+D1<-read.csv("Assistments-confidence.csv")
+D1<-select(D1,2:8)
 
 ```
 
+```{r}
 #Create a correlation matrix of the relationships between the variables, including correlation coefficients for each pair of variables/features.
 
-```{r}
 #You can install the corrplot package to plot some pretty correlation matrices (sometimes called correlograms)
+install.packages("corrplot")
+```
 
+```{r}
 library(corrplot)
 
 #Generate pairwise correlations
@@ -40,25 +34,25 @@ tl.col="black", tl.cex=0.6, tl.srt=45,
 
 #Study your correlogram image and save it, you will need it later
 ```
-
+```{r}
 #Create a new data frame with the mean_correct variables removed
 
-```{r}
-D2 <- 
+D2 <- select(D1,-mean_correct)
+D2<-as.data.frame(D2)
 
 #The, scale and center your data for easier interpretation
 D2 <- scale(D2, center = TRUE)
 ```
-
+```{r}
 #Now run the PCA on the new data frame
 
-```{r}
 pca <- prcomp(D2, scale = TRUE)
+
 ```
 
+```{r}
 #Although princomp does not generate the eigenvalues directly for us, we can print a list of the standard deviation of the variance accounted for by each component.
 
-```{r}
 pca$sdev
 
 #To convert this into variance accounted for we can square it, these numbers are proportional to the eigenvalue
@@ -72,13 +66,11 @@ summary(pca)
 #We can look at this to get an idea of which components we should keep and which we should drop
 
 plot(pca, type = "lines")
+# I will drop "mean_confidence" since it explains the least variance among the six variables.
 ```
-
-#Think about which components you would drop and make a decision
-
-#Part II
-
 ```{r}
+## PART II
+
 #Now, create a data frame of the transformed data from your pca.
 
 D3 <- as.data.frame(pca$x)
@@ -89,12 +81,23 @@ D4 <- cbind(D3, as.data.frame(D1$mean_correct))
 
 #Now re-run your scatterplots and correlations between the transformed data and mean_correct. If you had dropped some components would you have lost important infomation about mean_correct?
 
-COR2 <- 
-
+#Drop mean confidence
+D4 <- dplyr::select(D4, -PC6)
+COR2 <- cor(D4)
+plot(COR2)
 ```
-#Now print out the eigenvectors (often called loadings) for the components you generated:
 
 ```{r}
+corrplot(COR2, order="AOE", method="circle", tl.pos="lt", type="upper",        
+tl.col="black", tl.cex=0.6, tl.srt=45, 
+        addCoef.col="black", addCoefasPercent = TRUE,
+        sig.level=0.50, insig = "blank")
+
+#From the two plots above, it seems like dropping the variable of mean confidence makes only four components explains some of the variance.
+```
+```{r}
+#Now print out the eigenvectors (often called loadings) for the components you generated:
+
 pca$rotation
 
 #Examine the eigenvectors, notice that they are a little difficult to interpret. It is much easier to make sense of them if we make them proportional within each component
@@ -104,6 +107,7 @@ loadings <- abs(pca$rotation) #abs() will make all eigenvectors positive
 sweep(loadings, 2, colSums(loadings), "/") #sweep() computes each row as a proportion of the column. (There must be a way to do this with dplyr()?)
 
 #Now examine your components and try to come up with substantive descriptions of what some might represent?
+#From the biplot, we can see "prior percent correct", "prior problem count" and "problems attempted" are three components explains the most. And "mean confidence", "mean attempt" and "mean hint" have great correlations.
 
 #You can generate a biplot to help you, though these can be a bit confusing. They plot the transformed data by the first two components. Therefore, the axes represent the direction of maximum variance. Then mapped onto this point cloud are the original directions of the variables, depicted as red arrows. It is supposed to provide a visualization of which variables "go together". Variables that possibly represent the same underlying construct point in the same direction.  
 
@@ -111,6 +115,43 @@ biplot(pca)
 
 #Calculate values for each student that represent these your composite variables and then create a new correlogram showing their relationship to mean_correct.
 
+
 ```
-## Part III  
-# Also in this repository is a data set and codebook from Rod Martin, Patricia Puhlik-Doris, Gwen Larsen, Jeanette Gray, Kelly Weir at the University of Western Ontario about people's sense of humor. Can you perform a PCA on this data?
+##PART III
+#Also in this repository is a data set and codebook from Rod Martin, Patricia Puhlik-Doris, Gwen Larsen, Jeanette Gray, Kelly Weir at the University of Western Ontario about people's sense of humor. Can you perform a PCA on this data?
+```{r}
+A1<- read.csv("humor_data.csv")
+#select five variables self deafting, aggressive, selfhancing, affliative and accuracy.
+A2<- dplyr::select(A1,33:36,39)
+#create a correlation plot
+COR3<-cor(A2)
+corrplot(COR3, order="AOE", method="circle", tl.pos="lt", type="upper",        
+tl.col="black", tl.cex=0.6, tl.srt=45, 
+        addCoef.col="black", addCoefasPercent = TRUE,
+        sig.level=0.50, insig = "blank")
+#from the plot we can see that many variables have high to median correlations
+```
+```{r}
+# create a new data frame with "accuracy" removed.
+A3<- dplyr::select(A2, -accuracy)
+#scale and center your data for interpretation
+A3<- scale(A3, scale = TRUE)
+```
+
+```{r}
+#run PCA analysis
+pca2<- prcomp(A3, scale= TRUE)
+```
+```{r}
+pca2$sdev
+pca2$sdev^2
+summary(pca2)
+plot(pca2, type="lines")
+```
+
+```{r}
+#create a new data frame
+
+```
+
+
